--- a/resume.css
+++ b/resume.css
@@ -57,7 +57,7 @@ a {
 }
 
 /* Nav-pill colors */
-.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
+.nav-pills > li.active > a, .nav-pills > li > a:hover, .nav-pills > li.active > a:focus {
     color: var(--main-color4);
     background-color: var(--main-color2);
 }
